Electron Gas in Volume V
"Electron Gas in Volume V" Section has been added.

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -490,10 +490,16 @@ For Bosons use the same Slater-determinant by replacing all signs be + .
 Spin $\frac{1}{2}$ particles can be in any of the following states:
 \begin{enumerate}
 \item[] \underline{Singlet State:} \begin{equation} \chi_s(s1,s2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s1)\chi_{\downarrow}(s2)-\chi_{\downarrow}(s1)\chi_{\uparrow}(s2)) \end{equation} with total spin s=0.
-\item[] \underline{Triplet States:} with total spin 1, 0, -1: \begin{align}
+\item[] \underline{Triplet States:} with total spin 1, 0, -1:
+\begin{align}
 &\chi_{1,1}(s1,s2)=\chi_{\uparrow}(s1)\chi_{\uparrow}(s2)) &\\
 &\chi_{-1,-1}(s1,s2)=\chi_{\downarrow}(s1)\chi_{\downarrow}(s2) &\\
 &\chi_{1,0}(s1,s2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s1)\chi_{\downarrow}(s2)+\chi_{\downarrow}(s1)\chi_{\uparrow}(s2))
 \end{align}
-\end{enumerate}  
+\end{enumerate}
+\subsection*{\underline{Electron Gas in Volume V:}}
+Each eigenvalue in k-space occupy a volume $\frac{{2\pi}^3}{V}$ so that:
+\begin{equation} \sum_k f(k)=2\frac{{V}{2\pi}^3}\int d^3k f(k) \end{equation}
+Highest occupied wave vector is called Fermi wave vector k$_F$ 
+\begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, Electronic Density\end{equation}
 \end{document}
