--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -502,4 +502,18 @@ Each eigenvalue in k-space occupy a volume $\frac{{2\pi}^3}{V}$ so that:
 \begin{equation} \sum_k f(k)=2\frac{{V}{2\pi}^3}\int d^3k f(k) \end{equation}
 Highest occupied wave vector is called Fermi wave vector k$_F$ 
 \begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, Electronic Density\end{equation}
+\subsection*{\underline{Ground State of N Electrons in Volume V:}}
+
+\begin{align}
+&E_F=\frac{\hbar^2k^2}{2m}
+&E=2\sum_k\frac{\hbar^2k^2}{2m}=\frac{3}{5}NE_F
+&\\
+&2\frac{\Omega_k}{\frac{(2\pi)^3}{V}}=N=2\frac{\frac{4}{3}\pi k_F^3}{\frac{(2\pi)^3}{V}}
+& k_F = (3\pi^2n)^{1/3}
+&\\
+&n=\frac{N}{V}=\frac{1}{v}=\frac{1}{\frac{4}{3}\pi R_s^3}
+&R_s=\left(\frac{3}{4\pi n}\right)^{1/3}
+&\\
+& k_F = (3\pi^2n)^{1/3} = \frac{(9\pi /4)^{1/3}}{R_s}=\frac{1.92}{R_s}
+\end{align}
 \end{document}
