--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -299,7 +299,7 @@ Let A be a 2X2 matrix defined as:
     \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
     \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
 \end{gather}
-\subsection*{\underline{General Momentum Operator}}
+\subsection*{\underline{General Momentum Operator:}}
 \begin{flalign}
     &\left[J_x, J_y\right]=i\hbar J_z
     &&\left[J_z, J_x\right]=i\hbar J_y
@@ -320,7 +320,7 @@ $J=1\implies 2J+1=3 \implies 3\times3 matrices.$
 so that $J_\pm$ are off diagonal matrices.\\
 We oreder the eigenvectors for a fixed J-value as the following:\\
 $\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
-\subsection*{\underline{Spin Angular Momentum Operator}}
+\subsection*{\underline{Spin Angular Momentum Operator:}}
 For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
 \begin{flalign}
     &S_x=\frac{\hbar}{2}\left(
@@ -403,73 +403,6 @@ $$
 &\hat{\mathbf{z}}=\cos \theta \hat{\mathbf{r}}-\sin \theta \hat{\boldsymbol{\theta}}
 \end{aligned}
 $$
-\subsection*{\underline{Orbital Angular Momentum:}}
-\begin{gather}
-    \hat{L}_{x}=\hat{y} \hat{p}_{z}-\hat{z} \hat{p}_{y}, \quad \hat{L}_{y}=\hat{z} \hat{p}_{x}-\hat{x} \hat{p}_{z}, \quad \hat{L}_{z}=\hat{x} \hat{p}_{y}-\hat{y} \hat{p}_{x} \\
-    {\left[\hat{L}_{x}, \hat{L}_{y}\right]=i \hbar \hat{L}_{z}, \quad\left[\hat{L}_{y}, \hat{L}_{z}\right]=i \hbar \hat{L}_{x}, \quad\left[\hat{L}_{z}, \hat{L}_{x}\right]=i \hbar \hat{L}_{y} \cdot} \\
-    \hat{L}^{2} \equiv \hat{L}_{x} \hat{L}_{x}+\hat{L}_{y} \hat{L}_{y}+\hat{L}_{z} \hat{L}_{z}, \quad\left[\hat{L}^{2}, \hat{L}_{i}\right]=0 \\
-    \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-    \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)
-\end{gather}
-\subsection*{\underline{General Momentum Operator:}}
-\begin{flalign}
-    &\left[J_x, J_y\right]=i\hbar J_z
-    &&\left[J_z, J_x\right]=i\hbar J_y
-    &&\left[J_y, J_z\right]=i\hbar J_x
-    &\\
-    &J^2\ket{jm}=\hbar^2j(j+1)\ket{jm}
-    &&J_z\ket{jm}=\hbar m\ket{jm}
-    &&J^2=J^2_x + J^2_y + J^2_z
-\end{flalign}
-    $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
-     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).
-$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 matrices.\\$
-$J=1\implies 2J+1=3 \implies 3\times3 matrices.$
-\begin{flalign}    
-    &J_\pm=J_x \pm iJ_y
-    &&\sqrt{J(J+1)-m(m\pm1)}\ket{jm\pm1}
-\end{flalign}
-so that $J_\pm$ are off diagonal matrices.\\
-We oreder the eigenvectors for a fixed J-value as the following:\\
-$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
-\subsection*{\underline{Spin Angular Momentum Operator:}}
-For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
-\begin{flalign}
-    &S_x=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &1\\
-            1     &0
-        \end{matrix}\right)
-    &&S_y=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &-i\\
-            i     &0
-        \end{matrix}\right)
-    &&S_z=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            1     &0\\
-            0     &-1
-        \end{matrix}\right)
-    &\\
-    &\left[S_x, S_y\right]=i\hbar S_z
-    &&\left[S_z, S_x\right]=i\hbar S_y
-    &&\left[S_y, S_z\right]=i\hbar S_x
-    &\\
-    &S_+=S_x+iS_y
-    &&S_-=S_x-iS_y
-    &\\
-    &S_+=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &2\\
-            0     &0
-        \end{matrix}\right)
-    &&S_-=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &0\\
-            2     &0
-        \end{matrix}\right)
-\end{flalign}
 \subsection*{\underline{Identical Particles:}}
 Particles that share the same intrinsic properties: mass, charge, spin, magnetic moment, \dots etc. Identical particles are indistinguishable
 \begin{equation}
@@ -479,12 +412,12 @@ are either symmetric for Bosons (integer spin particles) or antisymmetric for Fe
 $\implies$ Pauli Exclusion Principle: Two identical Fermions cannot occupy the same quantum state.
 \begin{equation}
 \Psi_{Fermions}(R_1,R_2,\dots,R_N)= \frac{1}{\sqrt{N!}}
-\left(\begin{matrix}
+\left\vert\begin{matrix}
 \Psi_1(1)	&\Psi_2(1)		&\dots 	&\Psi_N(1)\\
 \Psi_1(2)	&\Psi_2(2)		&\dots 	&\Psi_N(2)\\
 \vdots 	&\vdots 		&\vdots 	&\vdots\\
 \Psi_1(N)	&\Psi_2(N)		&\dots 	&\Psi_N(N)
-\end{matrix}\right)
+\end{matrix}\right\vert
 \end{equation}
 For Bosons use the same Slater-determinant by replacing all signs be + .
 Spin $\frac{1}{2}$ particles can be in any of the following states:
@@ -499,7 +432,7 @@ Spin $\frac{1}{2}$ particles can be in any of the following states:
 \end{enumerate}
 \subsection*{\underline{Electron Gas in Volume V:}}
 Each eigenvalue in k-space occupy a volume $\frac{{2\pi}^3}{V}$ so that:
-\begin{equation} \sum_k f(k)=2\frac{{V}{2\pi}^3}\int d^3k f(k) \end{equation}
+\begin{equation} \sum_k f(k)=2\frac{V}{\left( 2\pi \right)^3}\int d^3k f(k) \end{equation}
 Highest occupied wave vector is called Fermi wave vector k$_F$ 
 \begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, Electronic Density\end{equation}
 \subsection*{\underline{Ground State of N Electrons in Volume V:}}
