--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -299,7 +299,7 @@ Let A be a 2X2 matrix defined as:
     \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
     \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
 \end{gather}
-\subsection*{\underline{General Momentum Operator:}}
+\subsection*{\underline{General Momentum Operator}}
 \begin{flalign}
     &\left[J_x, J_y\right]=i\hbar J_z
     &&\left[J_z, J_x\right]=i\hbar J_y
@@ -309,18 +309,32 @@ Let A be a 2X2 matrix defined as:
     &&J_z\ket{jm}=\hbar m\ket{jm}
     &&J^2=J^2_x + J^2_y + J^2_z
 \end{flalign}
+\begin{gather}
+J^2 =J_\pm J_\mp + {J_z}^2\mp\hbar J_z
+\end{gather}
     $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
      Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).
 $J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 matrices.\\$
 $J=1\implies 2J+1=3 \implies 3\times3 matrices.$
 \begin{flalign}    
     &J_\pm=J_x \pm iJ_y
-    &&\sqrt{J(J+1)-m(m\pm1)}\ket{jm\pm1}
+    &&J_\pm\ket{J m}=\sqrt{J(J+1)-m(m\pm1)}\ket{J m\pm1}
 \end{flalign}
 so that $J_\pm$ are off diagonal matrices.\\
 We oreder the eigenvectors for a fixed J-value as the following:\\
 $\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
-\subsection*{\underline{Spin Angular Momentum Operator:}}
+For a fixed J here is the ??? of operator A:
+\begin{equation}
+A = 
+\left(\begin{matrix}
+\bra J A \ket J	&\bra J A \ket {J-1}		&\dots 	&\bra J A \ket {-J}\\
+\bra{ J-1} A \ket J	&\bra{J-1} A \ket{J-1}		&\dots 	&\bra{ J-} A \ket {-J}\\
+\vdots 	&\vdots 		&\vdots 	&\vdots\\
+\bra{-J} A \ket J	&\bra{-J} A \ket{J-1}		&\dots 	&\bra{- J} A \ket {-J}
+\end{matrix}\right)
+\end{equation}
+in the above matrix, for a fixed J we denote $\ket{J m}=\ket m$.
+\subsection*{\underline{Spin Angular Momentum Operator}}
 For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
 \begin{flalign}
     &S_x=\frac{\hbar}{2}\left(
@@ -375,13 +389,16 @@ For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\fra
     u(r) \sim r^{\ell+1},\ \mathrm{as} r \rightarrow 0\\
     \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
     \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}\\
+    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
 \end{gather}
 \subsection*{\underline{Hydrogen Atom (Z=1):}}
 \begin{gather}
     H=\frac{\mathbf{p}^{2}}{2 m}-\frac{Z e^{2}}{r} \\
     E_{n}=-\frac{Z^{2} e^{2}}{2 a_{0}} \frac{1}{n^{2}}, \quad a_{0}=\frac{\hbar^{2}}{m e^{2}} \simeq 0.529 \times 10^{-10} \mathrm{~m}, \quad \frac{e^{2}}{2 a_{0}} \simeq 13.6 \mathrm{eV} \\
-    \psi_{n, \ell, m}(\vec{x})=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} Y_{\ell, m}(\theta, \phi) \\
+    \Psi_{n, \ell, m}(\vec{R})=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} Y_{\ell, m}(\theta, \phi) \\
+    \Psi_{n, \ell, m}(\vec{R}) = R_{n \ell}{Y_{\ell}^m}(\theta, \phi)= \sqrt{(\frac{2}{na})^3\frac{\left(n-\ell-1\right)!}{2n(n+\ell)!}}e^{\frac{-r}{na}}(\frac{2r}{na})^\ell [L_{n-\ell-1}^{2\ell+1}(2r/na)]{Y_{\ell}^m}(\theta, \phi)\\
+    \int\Psi^*_{n, \ell, m}(\vec{R})\Psi_{n, \ell, m}(\vec{R})d^3\vec R=\delta_{n,n'}\delta_{m,m'}\delta_{\ell,\ell '}\\
+    \hat{H}\Psi_{n, \ell, m}(\vec{R}) = E_n\Psi_{n, \ell, m}(\vec{R})\\
     n=1,2, \ldots, \quad \ell=0,1, \ldots, n-1, \quad m=-\ell, \ldots, \ell \\
     \psi_{n, \ell, m}(\vec{x})=\frac{u_{n \ell}(r)}{r} Y_{\ell, m}(\theta, \phi) \\
     u_{1,0}(r)=\frac{2 r}{a_{0}^{3 / 2}} \exp \left(-r / a_{0}\right) \\
@@ -403,6 +420,74 @@ $$
 &\hat{\mathbf{z}}=\cos \theta \hat{\mathbf{r}}-\sin \theta \hat{\boldsymbol{\theta}}
 \end{aligned}
 $$
+\subsection*{\underline{Orbital Angular Momentum:}}
+\begin{gather}
+    \hat{L}_{x}=\hat{y} \hat{p}_{z}-\hat{z} \hat{p}_{y}, \quad \hat{L}_{y}=\hat{z} \hat{p}_{x}-\hat{x} \hat{p}_{z}, \quad \hat{L}_{z}=\hat{x} \hat{p}_{y}-\hat{y} \hat{p}_{x} \\
+    {\left[\hat{L}_{x}, \hat{L}_{y}\right]=i \hbar \hat{L}_{z}, \quad\left[\hat{L}_{y}, \hat{L}_{z}\right]=i \hbar \hat{L}_{x}, \quad\left[\hat{L}_{z}, \hat{L}_{x}\right]=i \hbar \hat{L}_{y} \cdot} \\
+    \hat{L}^{2} \equiv \hat{L}_{x} \hat{L}_{x}+\hat{L}_{y} \hat{L}_{y}+\hat{L}_{z} \hat{L}_{z}, \quad\left[\hat{L}^{2}, \hat{L}_{i}\right]=0 \\
+    \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
+    \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
+    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)
+\end{gather}
+\subsection*{\underline{General Momentum Operator:}}
+\begin{flalign}
+    &\left[J_x, J_y\right]=i\hbar J_z
+    &&\left[J_z, J_x\right]=i\hbar J_y
+    &&\left[J_y, J_z\right]=i\hbar J_x
+    &\\
+    &J^2\ket{jm}=\hbar^2j(j+1)\ket{jm}
+    &&J_z\ket{jm}=\hbar m\ket{jm}
+    &&J^2=J^2_x + J^2_y + J^2_z
+\end{flalign}
+    $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
+     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).\\
+$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 \text{ matrices}.\\$
+$J=1\implies 2J+1=3 \implies 3\times3 \text{ matrices}.$
+\begin{flalign}    
+    &J_\pm=J_x \pm iJ_y
+    &&\sqrt{J(J+1)-m(m\pm1)}\ket{jm\pm1}
+    &&
+\end{flalign}
+so that $J_\pm$ are off diagonal matrices.\\
+We oreder the eigenvectors for a fixed J-value as the following:\\
+$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
+\subsection*{\underline{Spin Angular Momentum Operator:}}
+For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
+\begin{flalign}
+    &S_x=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &1\\
+            1     &0
+        \end{matrix}\right)
+    &&S_y=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &-i\\
+            i     &0
+        \end{matrix}\right)
+    &&S_z=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            1     &0\\
+            0     &-1
+        \end{matrix}\right)
+    &\\
+    &\left[S_x, S_y\right]=i\hbar S_z
+    &&\left[S_z, S_x\right]=i\hbar S_y
+    &&\left[S_y, S_z\right]=i\hbar S_x
+    &\\
+    &S_+=S_x+iS_y
+    &&S_-=S_x-iS_y
+    &\\
+    &S_+=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &2\\
+            0     &0
+        \end{matrix}\right)
+    &&S_-=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &0\\
+            2     &0
+        \end{matrix}\right)
+\end{flalign}
 \subsection*{\underline{Identical Particles:}}
 Particles that share the same intrinsic properties: mass, charge, spin, magnetic moment, \dots etc. Identical particles are indistinguishable
 \begin{equation}
@@ -412,12 +497,12 @@ are either symmetric for Bosons (integer spin particles) or antisymmetric for Fe
 $\implies$ Pauli Exclusion Principle: Two identical Fermions cannot occupy the same quantum state.
 \begin{equation}
 \Psi_{Fermions}(R_1,R_2,\dots,R_N)= \frac{1}{\sqrt{N!}}
-\left\vert\begin{matrix}
+\left(\begin{matrix}
 \Psi_1(1)	&\Psi_2(1)		&\dots 	&\Psi_N(1)\\
 \Psi_1(2)	&\Psi_2(2)		&\dots 	&\Psi_N(2)\\
 \vdots 	&\vdots 		&\vdots 	&\vdots\\
 \Psi_1(N)	&\Psi_2(N)		&\dots 	&\Psi_N(N)
-\end{matrix}\right\vert
+\end{matrix}\right)
 \end{equation}
 For Bosons use the same Slater-determinant by replacing all signs be + .
 Spin $\frac{1}{2}$ particles can be in any of the following states:
@@ -432,7 +517,7 @@ Spin $\frac{1}{2}$ particles can be in any of the following states:
 \end{enumerate}
 \subsection*{\underline{Electron Gas in Volume V:}}
 Each eigenvalue in k-space occupy a volume $\frac{{2\pi}^3}{V}$ so that:
-\begin{equation} \sum_k f(k)=2\frac{V}{\left( 2\pi \right)^3}\int d^3k f(k) \end{equation}
+\begin{equation} \sum_k f(k)=2\frac{{V}{2\pi}^3}\int d^3k f(k) \end{equation}
 Highest occupied wave vector is called Fermi wave vector k$_F$ 
 \begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, Electronic Density\end{equation}
 \subsection*{\underline{Ground State of N Electrons in Volume V:}}
@@ -449,4 +534,10 @@ Highest occupied wave vector is called Fermi wave vector k$_F$
 &\\
 & k_F = (3\pi^2n)^{1/3} = \frac{(9\pi /4)^{1/3}}{R_s}=\frac{1.92}{R_s}
 \end{align}
+\subsection*{\underline{Bloch Theorem in Solids:}}
+\begin{gather}
+\psi (R+x)=e^{i k\cdot R} \psi (x)\\
+\text{\underline{In $1D$:}}\quad k_i = \frac{2\pi n_i}{L}; \quad i=x, y, z;\quad n=0, \pm1, \pm 2, ... \Rightarrow dn = \frac{V}{(2\pi)^3} dk^3\\
+\sum_{k\sigma}F(k, \sigma)= \frac{V}{(2\pi)^3} \sum_\sigma \int_{}  d k^3 F(k, \sigma)
+\end{gather}
 \end{document}
