Modifying and adding
Hydrogen Atom, General Momentum operator, Bloch Theorem

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -322,13 +322,13 @@ $J=1\implies 2J+1=3 \implies 3\times3 matrices.$
 \end{flalign}
 so that $J_\pm$ are off diagonal matrices.\\
 We oreder the eigenvectors for a fixed J-value as the following:\\
-$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
-For a fixed J here is the ??? of operator A:
+$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$\\
+For a fixed J here is the expectation of operator A:
 \begin{equation}
 A = 
 \left(\begin{matrix}
 \bra J A \ket J	&\bra J A \ket {J-1}		&\dots 	&\bra J A \ket {-J}\\
-\bra{ J-1} A \ket J	&\bra{J-1} A \ket{J-1}		&\dots 	&\bra{ J-} A \ket {-J}\\
+\bra{ J-1} A \ket J	&\bra{J-1} A \ket{J-1}		&\dots 	&\bra{ J-1} A \ket {-J}\\
 \vdots 	&\vdots 		&\vdots 	&\vdots\\
 \bra{-J} A \ket J	&\bra{-J} A \ket{J-1}		&\dots 	&\bra{- J} A \ket {-J}
 \end{matrix}\right)
@@ -395,12 +395,12 @@ For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\fra
 \begin{gather}
     H=\frac{\mathbf{p}^{2}}{2 m}-\frac{Z e^{2}}{r} \\
     E_{n}=-\frac{Z^{2} e^{2}}{2 a_{0}} \frac{1}{n^{2}}, \quad a_{0}=\frac{\hbar^{2}}{m e^{2}} \simeq 0.529 \times 10^{-10} \mathrm{~m}, \quad \frac{e^{2}}{2 a_{0}} \simeq 13.6 \mathrm{eV} \\
-    \Psi_{n, \ell, m}(\vec{R})=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} Y_{\ell, m}(\theta, \phi) \\
-    \Psi_{n, \ell, m}(\vec{R}) = R_{n \ell}{Y_{\ell}^m}(\theta, \phi)= \sqrt{(\frac{2}{na})^3\frac{\left(n-\ell-1\right)!}{2n(n+\ell)!}}e^{\frac{-r}{na}}(\frac{2r}{na})^\ell [L_{n-\ell-1}^{2\ell+1}(2r/na)]{Y_{\ell}^m}(\theta, \phi)\\
-    \int\Psi^*_{n, \ell, m}(\vec{R})\Psi_{n, \ell, m}(\vec{R})d^3\vec R=\delta_{n,n'}\delta_{m,m'}\delta_{\ell,\ell '}\\
-    \hat{H}\Psi_{n, \ell, m}(\vec{R}) = E_n\Psi_{n, \ell, m}(\vec{R})\\
+    \psi_{n \ell m}(r, \theta,\phi)=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} {Y_{\ell}^m}(\theta, \phi) \\
+    \psi_{n\ell m}(r, \theta, \phi) = R_{n \ell}(r){Y_{\ell}^m}(\theta, \phi)= \sqrt{\left(\frac{2}{na}\right)^3\frac{\left(n-\ell-1\right)!}{2n(n+\ell)!}}e^{\frac{-r}{na}}\left(\frac{2r}{na}\right)^\ell [L_{n-\ell-1}^{2\ell+1}\left(\frac{2r}{na}\right)]{Y_{\ell}^m}(\theta, \phi)\\
+    \int\psi^*_{n \ell m}(\vec{r})\psi_{n' \ell ' m'}(\vec{r})d^3\vec r=\delta_{nn'}\delta_{mm'}\delta_{\ell\ell '}\\
+    \hat{H}\psi_{n \ell m}(\vec{r}) = E_n\psi_{n \ell m}(\vec{r})\\
     n=1,2, \ldots, \quad \ell=0,1, \ldots, n-1, \quad m=-\ell, \ldots, \ell \\
-    \psi_{n, \ell, m}(\vec{x})=\frac{u_{n \ell}(r)}{r} Y_{\ell, m}(\theta, \phi) \\
+   \psi_{n\ell m}(r, \theta, \phi)=\frac{u_{n \ell}(r)}{r} {Y_{\ell}^m}(\theta, \phi) \\
     u_{1,0}(r)=\frac{2 r}{a_{0}^{3 / 2}} \exp \left(-r / a_{0}\right) \\
     u_{2,0}(r)=\frac{2 r}{\left(2 a_{0}\right)^{3 / 2}}\left(1-\frac{r}{2 a_{0}}\right) \exp \left(-r / 2 a_{0}\right) \\
     u_{2,1}(r)=\frac{1}{\sqrt{3}} \frac{1}{\left(2 a_{0}\right)^{3 / 2}} \frac{r^{2}}{a_{0}} \exp \left(-r / 2 a_{0}\right)
@@ -420,74 +420,6 @@ $$
 &\hat{\mathbf{z}}=\cos \theta \hat{\mathbf{r}}-\sin \theta \hat{\boldsymbol{\theta}}
 \end{aligned}
 $$
-\subsection*{\underline{Orbital Angular Momentum:}}
-\begin{gather}
-    \hat{L}_{x}=\hat{y} \hat{p}_{z}-\hat{z} \hat{p}_{y}, \quad \hat{L}_{y}=\hat{z} \hat{p}_{x}-\hat{x} \hat{p}_{z}, \quad \hat{L}_{z}=\hat{x} \hat{p}_{y}-\hat{y} \hat{p}_{x} \\
-    {\left[\hat{L}_{x}, \hat{L}_{y}\right]=i \hbar \hat{L}_{z}, \quad\left[\hat{L}_{y}, \hat{L}_{z}\right]=i \hbar \hat{L}_{x}, \quad\left[\hat{L}_{z}, \hat{L}_{x}\right]=i \hbar \hat{L}_{y} \cdot} \\
-    \hat{L}^{2} \equiv \hat{L}_{x} \hat{L}_{x}+\hat{L}_{y} \hat{L}_{y}+\hat{L}_{z} \hat{L}_{z}, \quad\left[\hat{L}^{2}, \hat{L}_{i}\right]=0 \\
-    \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-    \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)
-\end{gather}
-\subsection*{\underline{General Momentum Operator:}}
-\begin{flalign}
-    &\left[J_x, J_y\right]=i\hbar J_z
-    &&\left[J_z, J_x\right]=i\hbar J_y
-    &&\left[J_y, J_z\right]=i\hbar J_x
-    &\\
-    &J^2\ket{jm}=\hbar^2j(j+1)\ket{jm}
-    &&J_z\ket{jm}=\hbar m\ket{jm}
-    &&J^2=J^2_x + J^2_y + J^2_z
-\end{flalign}
-    $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
-     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).\\
-$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 \text{ matrices}.\\$
-$J=1\implies 2J+1=3 \implies 3\times3 \text{ matrices}.$
-\begin{flalign}    
-    &J_\pm=J_x \pm iJ_y
-    &&\sqrt{J(J+1)-m(m\pm1)}\ket{jm\pm1}
-    &&
-\end{flalign}
-so that $J_\pm$ are off diagonal matrices.\\
-We oreder the eigenvectors for a fixed J-value as the following:\\
-$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
-\subsection*{\underline{Spin Angular Momentum Operator:}}
-For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
-\begin{flalign}
-    &S_x=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &1\\
-            1     &0
-        \end{matrix}\right)
-    &&S_y=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &-i\\
-            i     &0
-        \end{matrix}\right)
-    &&S_z=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            1     &0\\
-            0     &-1
-        \end{matrix}\right)
-    &\\
-    &\left[S_x, S_y\right]=i\hbar S_z
-    &&\left[S_z, S_x\right]=i\hbar S_y
-    &&\left[S_y, S_z\right]=i\hbar S_x
-    &\\
-    &S_+=S_x+iS_y
-    &&S_-=S_x-iS_y
-    &\\
-    &S_+=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &2\\
-            0     &0
-        \end{matrix}\right)
-    &&S_-=\frac{\hbar}{2}\left(
-        \begin{matrix}
-            0     &0\\
-            2     &0
-        \end{matrix}\right)
-\end{flalign}
 \subsection*{\underline{Identical Particles:}}
 Particles that share the same intrinsic properties: mass, charge, spin, magnetic moment, \dots etc. Identical particles are indistinguishable
 \begin{equation}
