--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -313,9 +313,9 @@ Let A be a 2X2 matrix defined as:
 J^2 =J_\pm J_\mp + {J_z}^2\mp\hbar J_z
 \end{gather}
     $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
-     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).
-$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 matrices.\\$
-$J=1\implies 2J+1=3 \implies 3\times3 matrices.$
+     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).\\
+$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 \text{ matrices}.\\$
+$J=1\implies 2J+1=3 \implies 3\times3\text{ matrices}.$
 \begin{flalign}    
     &J_\pm=J_x \pm iJ_y
     &&J_\pm\ket{J m}=\sqrt{J(J+1)-m(m\pm1)}\ket{J m\pm1}
