Updated Formula Sheet
Yet more corrections

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -448,10 +448,10 @@ Spin $\frac{1}{2}$ particles can be in any of the following states:
 \end{align}
 \end{enumerate}
 \subsection*{\underline{Electron Gas in Volume V:}}
-Each eigenvalue in k-space occupy a volume $\frac{{2\pi}^3}{V}$ so that:
-\begin{equation} \sum_k f(k)=2\frac{{V}{2\pi}^3}\int d^3k f(k) \end{equation}
+Each eigenvalue in k-space occupy a volume $\frac{{(2\pi)^3}}{V}$ so that:
+\begin{equation} \sum_k f(k)=2\frac{V}{(2\pi)^3}\int d^3k f(k) \end{equation}
 Highest occupied wave vector is called Fermi wave vector k$_F$ 
-\begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, Electronic Density\end{equation}
+\begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, \text{Electronic Density}\end{equation}
 \subsection*{\underline{Ground State of N Electrons in Volume V:}}
 
 \begin{align}
