Super final updated formula sheet

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -137,8 +137,8 @@ Given that $H\psi_n(x)=E_n\psi_n(x);\quad \int\phi^*_n(x)\phi_m(x)dx=\delta_{nm}
     E=\int\psi^*_n(x)H\psi_m(x)dx=\sum_n|c_n|^2E_n\\
     \Psi(x,0)=\psi(x)=\sum_nc_n\phi_n(x)\implies\Psi(x,t)
 \begin{cases}
-\sum_nc_ne^{-iE_nt/\hbar}\phi_n(x)\\
-e^{i\hat H t/\hbar}\Psi(x,0)\\
+=\sum_nc_ne^{-iE_nt/\hbar}\phi_n(x)\\
+=e^{i\hat H t/\hbar}\Psi(x,0)\\
 \end{cases}
   \\ c_n=\int\phi_n^*\Psi(x,0)dx
 \end{gather}
@@ -309,14 +309,14 @@ Let A be a 2X2 matrix defined as:
     &&\left[J_z, J_x\right]=i\hbar J_y
     &&\left[J_y, J_z\right]=i\hbar J_x
     &\\
-    &J^2\ket{jm}=\hbar^2j(j+1)\ket{jm}
-    &&J_z\ket{jm}=\hbar m\ket{jm}
+    &J^2\ket{Jm}=\hbar^2j(j+1)\ket{Jm}
+    &&J_z\ket{Jm}=\hbar m\ket{Jm}
     &&J^2=J^2_x + J^2_y + J^2_z
 \end{flalign}
 \begin{gather}
 J^2 =J_\pm J_\mp + {J_z}^2\mp\hbar J_z
 \end{gather}
-    $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
+    $\ket{Jm}$ are common eigenstates of the $J^2,J_z$;\\
      Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).\\
 $J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 \text{ matrices}.\\$
 $J=1\implies 2J+1=3 \implies 3\times3\text{ matrices}.$
@@ -479,4 +479,26 @@ Highest occupied wave vector is called Fermi wave vector k$_F$
 \text{\underline{In $3D$:}}\quad k_i = \frac{2\pi n_i}{L}; \quad i=x, y, z;\quad n=0, \pm1, \pm 2, ... \Rightarrow dn = \frac{V}{(2\pi)^3} dk^3\\
 \sum_{k\sigma}F(k, \sigma)= \frac{V}{(2\pi)^3} \sum_\sigma \int_{}  d k^3 F(k, \sigma)
 \end{gather}
+\subsection*{\underline{Probability Distributions:}}
+\paragraph{}We have three distributions, one for classical particles (Maxwell-Boltzmann) and two for undistinguishable particles (Fermi-Dirac for fermions and Bose-Einstein for bosons). Their equations are the following:
+\begin{gather}
+P(E)=\frac{1}{e^{\beta(E -E_f)}+1} \qquad \text{Fermi--Dirac Dist.}\\
+P(E)=\frac{1}{e^{\beta(E -\mu)}-1} \qquad \text{Bose--Einstein Dist.}\\
+P(E)=\frac{1}{e^{\beta(E -\mu)}} \qquad \text{Maxwell--Boltzmann Dist.}\\
+\text{Where $\beta=\frac{1}{k_B T}$}
+\end{gather}
+\paragraph{}The plots of these distributions for different temperatures:
+\begin{center}
+    \frame{\includegraphics[width=13.5cm]{pt1.pdf}}\\
+    \textbf{Figure 1:} Fermi--Dirac Dist. when $E_f=7eV$. For fermions\\
+\end{center}
+\par
+\begin{center}
+    \frame{\includegraphics[width=13.5cm]{pt2.pdf}}\\
+    \textbf{Figure 2:} Bose--Einstein Dist. when $\mu=7eV$. For bosons\\
+\end{center}
+\begin{center}
+    \frame{\includegraphics[width=13.5cm]{pt3.pdf}}\\
+    \textbf{Figure 3:} Maxwell--Boltzmann Dist. when $\mu=7eV$. For bosons\\
+\end{center}
 \end{document}
